[package]
name = "isuports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.4"
actix-web = "4"
bytes = "1"
csv = "1"
futures-util = "0.3"
jsonwebtoken = "8"
lazy_static = "1"
listenfd = "1"
nix = "0.24"
regex = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", default-features = false, features = ["macros", "runtime-actix-rustls", "mysql", "sqlite"] }
thiserror = "1"
tokio = { version = "1", features = ["fs", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
